--- a/MessageArchive/Web.config
+++ b/MessageArchive/Web.config
@@ -9,6 +9,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="ES_URL" value="https://xa5kdmcnyu:a934lehl0x@messagearchive1-2552822091.us-west-2.bonsai.io" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
