--- a/MessageArchive/packages.config
+++ b/MessageArchive/packages.config
@@ -1,7 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Angular.UI.Bootstrap" version="0.13.4" targetFramework="net452" />
+  <package id="AngularJS.Core" version="1.4.5" targetFramework="net452" />
   <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
+  <package id="bootstrap" version="3.3.5" targetFramework="net452" />
   <package id="Elasticsearch.Net" version="1.7.1" targetFramework="net452" />
+  <package id="jQuery" version="2.1.4" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net452" />
@@ -14,7 +18,9 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
+  <package id="Moment.js" version="2.10.6" targetFramework="net452" />
   <package id="NEST" version="1.7.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
+  <package id="ng-infinite-scroll" version="1.0.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
